# seasmoke

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  README.md  pyproject.toml
.github/workflows/: format.yml  lint.yml  test.yml
seasmoke/: __main__.py  app.py
tests/: test_app.py
